# tide-wasm-surf-example

./: .gitignore  README.md
client/: Cargo.toml
client/src/: lib.rs
docker/: docker-compose.yml.example
server/: .env  .env.example  Cargo.toml
server/src/: app.rs  appstate.rs  config.rs  error.rs  main.rs
server/static/: index.html  pkg
