[package]
name = "example-client"
version = "0.1.0"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="0.2.68"
async-std = "1.6"
surf = {version = "2.0", features = ["wasm-client"]}
web-sys = {version = "0.3.45", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"]}
