[package]
name = "example-server"
version = "0.1.0"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
tide = "0.13.0"
sqlx = { version = "0.4.0-beta.1", features = [ "macros", "postgres", "chrono", "json" ] }
